# libmylib

./: .gitignore  Makefile.am  README.md  build.sh  configure.ac
src/: mylib.c  mylib.h
tests/: .gitignore  02-sub.c  Makefile.am  my-test-driver
